# Wealth_Engine

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile.backend  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_denormalize_trees_seeds.py  003_multi_tenant.py  004_exchange_credentials.py  005_add_dumb_mode_flag.py  006_position_monitor_fields.py  007_funding_transactions.py  008_user_bank_details.py  009_prod_hardening.py  53cfd16ba7a2_add_user_preference_columns.py
backend/app/: __init__.py  config.py  database.py  main.py  verify_schema.py
backend/app/admin/: routes.py
backend/app/agents/: adversarial_loop.py  alpha_hunter.py  base.py  shadow_agent.py  strategy_researcher.py
backend/app/api/: deps.py
backend/app/auth/: dependencies.py  jwt_handler.py  routes.py
backend/app/exchanges/: alpaca_connector.py  base_connector.py  binance_connector.py  connector_factory.py  routes.py
backend/app/models/: __init__.py  exchange_credential.py  forest.py  funding.py  global_state.py  seed.py  trade_decision.py  tree.py  user.py
backend/app/schemas/: __init__.py  waterfall.py
backend/app/services/: cashout_service.py  crypto_service.py  deposit_detector.py  forex_service.py  funding_service.py  heartbeat.py  indicator_service.py  investec_client.py  market_scanner.py  (+10 more)
backend/tests/: conftest.py  test_auth_admin.py  test_exchange_vault.py  test_heartbeat.py  test_kelly_sizing.py  test_tiered_vault.py  test_waterfall.py  test_waterfall_multi_tenant.py
(+43 files in other folders)
