[project]
name = "fractal-wealth-engine"
version = "0.1.0"
description = "Recursive Fractal Wealth Engine — Phase 1: Shared Root & Waterfall Logic"
requires-python = ">=3.11"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.ruff]
line-length = 100
target-version = "py311"
